@@ -66,6 +66,7 @@ nobase_dist_data_DATA += \
   RivetGun/fpythia-d0-zjets.params \
   RivetGun/fpythia-d0-zpt.params \
   RivetGun/fpythia-d0-gammajet.params \
+  RivetGun/fpythia-d0-gammainc.params \
   RivetGun/charybdisher-default.params  \
   RivetGun/charybdispyt-default.params  \
   RivetGun/lep1.params \
